# plover_advanced_lookup

./: MANIFEST.in  setup.cfg
plover_advanced_lookup/: advanced_lookup.py  advanced_lookup.ui  advanced_lookup_ui.py  resources_rc.py
test/: test_plover_wpm_meter.py
