[metadata]
name = plover_advanced_lookup
version = 0.0.1
description = More flexible dictionary lookup tool for Plover
long_description = file: README.rst
author = Ted Morin
author_email = morinted@gmail.com
license = GNU General Public License v3 (GPLv3)
url = https://github.com/morinted/plover_advanced_lookup
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev2
packages =
	plover_advanced_lookup

[options.entry_points]
plover.gui.qt.tool =
	advanced_lookup = plover_advanced_lookup.advanced_lookup:AdvancedLookup

# vim: commentstring=#\ %s list
